# md-table-to-multicode

./: .gitignore  OUTPUT.txt  README.md  convert.py  index.html  main.js  pyproject.toml  run.py  style.css  table.txt  web.js
.github/workflows/: static.yml
md-table-to-multicode-fmt/: TABLE.md  index.html
misc/: pyc_loader.py
module/: convert
